#pragma once

namespace Eugene
{
	class Engine
	{
	};
}


extern "C" __declspec(dllexport) int __cdecl Run(const char* scene);